--- a/mysite/blog/templates/blog/post_edit.html
+++ b/mysite/blog/templates/blog/post_edit.html
@@ -1,9 +1,10 @@
 {% extends "blog/base.html" %}
 
+
 {% block content %}
     <h1>Novo Post</h1>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Guardar</button>
+        <button type="submit" class="save btn btn-primary btn-default">Guardar</button>
     </form>
 {% endblock %}
